// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ScrollableContainer /> by default matches with snapshot 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxirZ cjlLft"
>
  <div
    className="sc-AxiKw cKkGLp"
  />
</div>
`;

exports[`<ScrollableContainer /> with children matches with snapshot 1`] = `
<div
  className="sc-AxjAm jnRBqU sc-AxirZ cjlLft"
>
  <div
    className="sc-AxiKw cKkGLp"
  >
    <nav>
      <ul>
        <li>
          Item 1
        </li>
        <li>
          Item 2
        </li>
        <li>
          Item 3
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<ScrollableContainer /> with some props matches with snapshot 1`] = `
<div
  aria-hidden={true}
  className="sc-AxjAm kBMraH sc-AxirZ cjlLft custom__class"
>
  <div
    className="sc-AxiKw jmHJgR"
  />
</div>
`;
